--- a/b4.html
+++ b/b4.html
@@ -13,7 +13,7 @@
         <ul>this word is <sub>subscripted</sub></ul>
         <ul>this word is <u>inserted</u></ul>
         <ul>this word is <s>deleted</s></ul>
-        <ul>this word is <span style="background-color: yellow;">marked</span></ul>
+        <ul>this word is <mark>marked</mark></ul>
     </p>
 </body>
 </html>
