--- a/b7.html
+++ b/b7.html
@@ -8,12 +8,12 @@
     <h1>Chào mừng đến với Thế giới công nghệ</h1>
     <p>nơi cập nhật những xu hương công nghệ mới nhất!</p>
     <h3>Về chúng tôi</h3>
-    <p>Chúng tôi là một nhóm <span style="background-color: yellow;">đam mê công nghệ</span>, khám phá những đổi mới trong <span style="text-decoration: underline dotted black 2px;">AI, Blockchain</span> và nhiều hơn thế.</p>
+    <p>Chúng tôi là một nhóm <mark>đam mê công nghệ</mark>, khám phá những đổi mới trong <abbr title="Artificial Intelligence">AI</abbr>, <abbr title="Blockchain">Blockchain</abbr> và nhiều hơn thế.</p>
     <h3>Dịch vụ chính</h3>
     <ul>
         <li><u>phát triển phần mềm</u> - giải pháp tối ưu cho doanh nghiệp.</li>
-        <li><span style="background-color: yellow;">trí tuệ nhân tạo</span> - nâng cao hiệu suất và sáng tạo.</li>
-        <li><span style="text-decoration: underline dotted black 2px;">IoT</span> - kết nối thế giới thông minh.</li>
+        <li><mark>trí tuệ nhân tạo</mark> - nâng cao hiệu suất và sáng tạo.</li>
+        <li><abbr title="Internet of Things">IoT</abbr> - kết nối thế giới thông minh.</li>
     </ul>
     <h3>Tiêu điểm công nghệ</h3>
     <img src="img_B7.webp" alt="lỗi hình ảnh">
@@ -22,7 +22,7 @@
     <p>định luật nổi tiếng của vật lý: <b>E = mc²</b></p>
     <p>công thức hóa học phổ biến: <b>H₂O</b> - nguồn sống của con người.</p>
     <h3>những lợi ích công nghệ mang lại</h3>
-    <p>công nghệ giúp chúng ta <u>làm việc thông minh hơn</u> và <span style="background-color: yellow;">nâng cao chất lượng cuộc sống</span>.</p>
+    <p>công nghệ giúp chúng ta <u>làm việc thông minh hơn</u> và <mark>nâng cao chất lượng cuộc sống</mark>.</p>
     <h3>liên hệ</h3>
     <p>hãy <a href="url">liên hệ với chúng tôi</a> để biết thêm chi tiết.</p>
     <p>&copy; 2025 Thế giới công nghệ. mọi quyền được bảo lưu.</p>
