--- a/bth.html
+++ b/bth.html
@@ -1,60 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>trang cá nhân - Lê Minh Hoàng</title>
 </head>
 <body>
-    <header><h1>Lê Minh Hoàng</h1>
+    <h1>Lê Minh Hoàng</h1>
     <p><strong>Sinh viên ngành công nghệ thông tin</strong></p>
-    </header>
-    <main>
-        <section>
-            <h2>giới thiệu</h2>
-            <p>xin chào! mình là <strong>Lê Minh Hoàng</strong>, hiện đang là sinh viên năm nhất. mình thích học lập trình và mong muốn trở thành một lập trình viên giỏi.</p>
-            <p>hiện tại, mình đang học các kiến thức cơ bản về <mark style="background-color: yellow;">html</mark>, <mark style="background-color: yellow;">css</mark> và <mark style="background-color: yellow;">javascript</mark> để bắt đầu xây dựng trang web đầu tiên của mình.</p>
-        </section>
-        <section>
-            <h2>sở thích</h2>
-            <ul>
-                <li>chạy bộ</li>
-                <li>đọc sách</li>
-                <li>chơi game</li>
-                <li>du lịch</li>
-            </ul>
-        </section>
-        <section>
-            <h2>mục tiêu học tập</h2>
-            <ol>
-                <li><p>hoàn thành khóa học HTML cơ bản</p></li>
-                <li><p>tạo trang web cá nhân đầu tiên</p></li>
-                <li><p>học thêm CSS và JavaScript</p></li>
-            </ol>
-        </section>
-        <section>
-            <h2>ảnh đại diện</h2>
-            <img src="ảnh.jpg" alt="ảnh đại diện">
-        </section>
-        <section>
+    <h2>giới thiệu</h2>
+    <p>xin chào! mình là <strong>Lê Minh Hoàng</strong>, hiện đang là sinh viên năm nhất. mình thích học lập trình và mong muốn trở thành một lập trình viên giỏi.</p>
+    <p>hiện tại, mình đang học các kiến thức cơ bản về <mark>html</mark>, <mark>css</mark> và <mark>javascript</mark> để bắt đầu xây dựng trang web đầu tiên của mình.</p>
+    <h2>sở thích</h2>
+    <ul>
+        <li>chạy bộ</li>
+        <li>đọc sách</li>
+        <li>chơi game</li>
+        <li>du lịch</li>
+    </ul>
+    <h2>mục tiêu học tập</h2>
+        <ol>
+            <li><p>hoàn thành khóa học HTML cơ bản</p></li>
+            <li><p>tạo trang web cá nhân đầu tiên</p></li>
+            <li><p>học thêm CSS và JavaScript</p></li>
+        </ol>
+    <h2>ảnh đại diện</h2>
+    <img src="ảnh.jpg" alt="ảnh đại diện">
             <h2>liên kết yêu thích</h2>
             <ul>
                 <li><a href="https://www.facebook.com/">Facebook</a></li>
                 <li><a href="https://www.w3schools.com">trang học lập trình yêu thích W3Schools</a></li>
                 <li><a href="#top">quay lại đầu trang</a></li>
             </ul>   
-        </section>
-        <article>
             <h2>ví dụ về các thẻ định dạng</h2>
-            <p>xin chào, mình là <strong>Lê Minh Hoàng</strong>. mình hiện là sinh viên năm nhất học ngành <strong>công nghệ thông tin</strong>. mình rất yêu thích <u><i>lập trình</i></u> và luôn cố gắng  <mark style="background-color: yellow;">học hỏi mỗi ngày</mark>.</p>
+            <p>xin chào, mình là <strong>Lê Minh Hoàng</strong>. mình hiện là sinh viên năm nhất học ngành <strong>công nghệ thông tin</strong>. mình rất yêu thích <u><i>lập trình</i></u> và luôn cố gắng  <mark>học hỏi mỗi ngày</mark>.</p>
             <h3>phân biệt block và inline elements</h3>
-            <p>đây là thẻ P thứ nhất &#40;<span style="text-decoration: underline dotted black 2px;">block element</span>&#41;</p>
-            <p>đây là thẻ P thứ hai &#40;<span style="text-decoration: underline dotted black 2px;">block element</span>&#41;. hai thẻ này nằm trên hai dòng riêng biệt.</p>
-            <p>đây là thẻ span &#40;<span style="text-decoration: underline dotted black 2px;">inline element</span>&#41; cùng nằm trên cùng một dòng.</p>
-        </article>
-    </main>
-    <footer>
+            <p>đây là thẻ P thứ nhất &#40;<abbr title="block element">block element</abbr>&#41;</p>
+            <p>đây là thẻ P thứ hai &#40;<abbr title="block element">block element</abbr>&#41;. hai thẻ này nằm trên hai dòng riêng biệt.</p>
+            <p>đây là thẻ span &#40;<abbr title="inline element">inline element</abbr>&#41; cùng nằm trên cùng một dòng.</p>
         <p>&copy; 2025 - trang web được tạo bởi Lê Minh Hoàng.</p>
-    </footer>
 </body>
 </html>
